--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typescript": "^5"
   },
   "scripts": {
-    "dev": "bun --watch src/index.ts"
+    "dev": "bun --watch src/index.ts",
+    "simulate": "bun scripts/simulate-conversation.ts"
   },
   "dependencies": {
     "express": "^5.1.0",
